WIP: Remove remove yang-maven-plugin interfaces
// FIXME: fixup unit tests
// FIXME: probably needs some amount of mocking rework

JIRA: YANGTOOLS-747
Change-Id: I5e3acf0df97a33e7507841a549fa7109b48c16c3
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>